--- a/proposal-talk.tex
+++ b/proposal-talk.tex
@@ -99,17 +99,17 @@ Reuse-Informed Optimization of Planning Effort}
 
 \input{proposal-talk-intro}
 
-\input{proposal-talk-act1}
+%\input{proposal-talk-act1}
 
-\input{proposal-talk-act2}
+%\input{proposal-talk-act2}
 
-\input{proposal-talk-act3}
+%\input{proposal-talk-act3}
 
 \begin{frame}[t]
    \frametitle{Summary of Proposed Work}
    \centering
    
-   \footnotesize{\renewcommand{\arraystretch}{1.3}
+   \footnotesize{\renewcommand{\arraystretch}{1.0}
    \begin{tabular}{lccl}
    \toprule
    {\bf Work Item} & {\bf Done} & {\bf Target Date} \\
@@ -117,39 +117,24 @@ Reuse-Informed Optimization of Planning Effort}
    \PaperPortrait\; Guided Manipulation Planning at the DRC (ISER) & 100\% & Feb `14 \\
    \PaperPortrait\; Comprehensive Multi-Root Planning (ICRA) & 100\% & Oct `14 \\
    \midrule
-   Implement E$^8$-PRM (OMPL) & 90\% & Apr `15 \\
-   Q6: Multi-set literature survey & 40\% & Apr `15 \\
-   Q7: Managing subset explosion & 10\% & Apr `15 \\
-   Q4: E$^8$-PRM experiments in 2D \& 7D & 10\% & Apr `15 \\
-   Q8: Multi-Set PRM experiments (Herb/Chimp) & 10\% & Apr `15 \\
-   \PaperPortrait\; Multi-Set Planning (ISRR) & 70\% & Apr `15 \\
-   \midrule
-   Q2: Implement E$^8$ using implemental LPA* search & 0\% & May `15 \\
-   Q5: Optimizing ensemble effort in expectation & 0\% & May `15 \\
-   \bottomrule
-   & & continued ...\\
-   \end{tabular}
-   } %arraystretch
-   
-\end{frame}
-
-\begin{frame}[t]
-   \frametitle{Summary of Proposed Work}
-   \centering
-   
-   \footnotesize{\renewcommand{\arraystretch}{1.3}
-   \begin{tabular}{lccl}
-   \toprule
-   {\bf Work Item} & {\bf Done} & {\bf Target Date} \\
-   \midrule
-   Q1: E$^8$ theoretical guarantees & 10\% & Aug `15 \\
-   Q3: Empirical comparison: E$^8$ vs. E-graphs, anytime, etc. & 10\% & Aug `15 \\
-   \PaperPortrait\; Minimizing Edge Evaluations on Graphs (AAAI) & 0\% & Sep `15 \\
+   Implement E$^8$-PRM (OMPL) & 80\% & Apr `15 \\
+   Q1: Implement E$^8$ using implemental LPA* search & 0\% & May `15 \\
+   Q2: E$^8$-PRM comparison experiments (Herb/Chimp) & 20\% & Jun `15 \\
+   %Q5: Optimizing ensemble effort in expectation & 0\% & May `15 \\
+   %Q1: E$^8$ theoretical guarantees & 10\% & Aug `15 \\
+   %Q3: Empirical comparison: E$^8$ vs. E-graphs, anytime, etc. & 10\% & Aug `15 \\
+   \PaperPortrait\; The E$^8$-PRM: Minimizing Planning Effort (Humanoids) & 0\% & Jun `15 \\
    %Multi-Set Planning for the DRC (Humanoids) & QX & Jun `15 \\
    \midrule
-   Implement Proteus task planner (OpenRAVE) & 20\% & Jun `15 \\
-   Q9: Manipulation task experiments (Herb and Chimp) & 10\% & Jul-Aug `15 \\
-   \PaperPortrait\; Proteus task planner (ICRA) & 0\% & Oct `15 \\
+   Q3: Multi-set literature survey & 40\% & Apr `15 \\
+   Q4: Managing subset explosion & 10\% & Jul `15 \\
+   %Q4: E$^8$-PRM experiments in 2D \& 7D & 10\% & Apr `15 \\
+   Q5: Multi-Set PRM experiments (Herb/Chimp) & 10\% & Aug `15 \\
+   \PaperPortrait\; Multi-Set Planning (ICRA) & 70\% & Oct `15 \\
+   \midrule
+   Implement Proteus task planner with CMR & 20\% & Aug `15 \\
+   Q6: Manipulation task experiments (Herb and Chimp) & 10\% & Jul-Aug `15 \\
+   %\PaperPortrait\; Proteus task planner (ICRA) & 0\% & Oct `15 \\
    \midrule
    \PaperPortrait\; Thesis Writing & 0\% & Sep-Nov `15 \\
    Defense & 0\% & Dec `15 \\
@@ -181,7 +166,7 @@ Reuse-Informed Optimization of Planning Effort}
 \end{frame}
 
 \begin{frame}
-   \frametitle{Thannk you!}
+   \frametitle{Thank you!}
    \begin{tikzpicture}
       \draw[step=1,black!10,very thin,opacity=\gridopacity] (0,0) grid (12,8);
    
