--- a/proposal-talk-act3.tex
+++ b/proposal-talk-act3.tex
@@ -74,7 +74,7 @@
          Planning for manipulation tasks poses three challenges:
          
          \begin{itemize}
-         \item Challenge 1: Planning each step is expensive.
+         \item Challenge 1: Capturing the planning/execution tradeoff..
          \item Challenge 2: Incongruent steps impede reuse.
          \item Challenge 3: Coupled steps require long planning horizons.
          \end{itemize}
@@ -265,7 +265,7 @@
          \only<4->{\draw[->,line width=1pt] (9,5.3) -- (9.3,4.8);}
       
       \only<5->{
-         \node[fill=blue!10,rounded corners,align=center] at (6,0.75) {
+         \node[fill=blue!20,rounded corners,align=center] at (6,0.75) {
             What objective should\\each planner instance use?
          };
       }
@@ -395,7 +395,7 @@
          \end{equation*}%
       \end{minipage}};
       
-      \node[fill=blue!10,rounded corners,anchor=north,font=\small] at (6,2.5)
+      \node[fill=blue!20,rounded corners,anchor=north,font=\small] at (6,2.5)
       {\begin{minipage}{9cm}
          Comprehensive Multi-Root objective:
          \begin{equation*}
@@ -549,7 +549,7 @@
       
       \node[fill=blue!20,rounded corners,anchor=north]
       at (6,4.0) {\begin{minipage}{10.5cm}
-         {\bf Research Question Q9:}\\
+         {\bf Research Question Q6:}\\
          Implement the multi-step Proteus planner
          which discovers subsets in manipulation tasks,
          samples roots within each interface set,
